# BionicEyes

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindJPEG.cmake  FindOpenCV_CUDA.cmake  FindOpenCV_NoCUDA.cmake  FindZeroMQ.cmake
docs/: README.md
include/: Doxyfile  README.md  evo_be.h  evo_be_Common.h
include/internal/: evo_be_ImageProcess_Core.h  evo_be_ImageProcess_Core_GPU.h  evo_be_Utilities.h
src/: CMakeLists.txt
src/BionicEyes_Python/: evo_be.py
src/BionicEyes_Samples/: CMakeLists.txt  README.md
src/BionicEyes_Samples/BE_Sample_Control_Remote/: BE_Sample_Control_Remote.cpp
src/BionicEyes_Samples/BE_Sample_Depth/: BE_Sample_Depth.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_GetDeviceList/: BE_Sample_GetDeviceList.cpp
src/BionicEyes_Samples/BE_Sample_GrabFakeDataOneByOne/: BE_Sample_GrabFakeDataOneByOne.cpp
src/BionicEyes_Samples/BE_Sample_GrabImage_Local/: BE_Sample_GrabImage_Local.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_GrabImage_Remote/: BE_Sample_GrabImage_Remote.cpp
src/BionicEyes_Samples/BE_Sample_JoyStick/: BE_Sample_JoyStick.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_KeyPress/: BE_Sample_KeyPress.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_Log/: BE_Sample_Log.h
src/BionicEyes_Samples/BE_Sample_SV_VOR/: BE_Sample_SV_VOR.cpp
src/BionicEyes_Samples/BE_Sample_SaveData/: BE_Sample_SaveData.cpp
